<resources>
    <string name="app_name">Digital Coach</string>
    <string name="welcome_text">Willkommen!</string>
    <string name="startIntro_button">Intro \nstarten</string>
    <string name="skip_button">Intro \nüberspringen</string>
    <string name="weiter_button">Weiter</string>
    <string name="start_button">Los geht\'s</string>
    <string name="zielEinfuehrung_TextView">In Level 1 legst du dein Ziel fest, welches du im Laufe dieser App erreichen willst.</string>
    <string name="ideeEinfuehrung_TextView">In Level 2 definierst du Lösungswege, die dich deinem Ziel näher bringen.</string>
    <string name="ressourceEinfuehrung_TextView">In Level 3 beschäftigst du dich mit deinen Stärken und allem Positiven in deinem Leben.</string>
    <string name="festhaltenEinfuehrung_TextView">In Level 4 betrachtest du die seit Level 1 eingetretenen positiven Veränderungen.</string>
    <string name="loesungEinfuehrung_TextView">In Level 5 bestimmst du wie es weiter geht.</string>
    <string name="menuIntro_Text1">Rechts oben im Bildschirm befindet sich das Hauptmenü. Dort hast du direkten Zugriff auf verschiedene Übungen, die du im laufe der App freischaltest.</string>
    <string name="menuIntro_help">Bei einzelnen Übungen erscheint links neben dem Menü ein Fragezeichen. Hier erhältst du nähere Informationen und Hilfestellungen zu der jeweiligen Übung.</string>
    <string name="menuIntro_Text2">In der Leiste am Boden siehst du in welchem Level du dich momentan befindest. Außerdem kannst du die Leiste zur Navigation nutzen und direkt an den Anfang eines Levels springen, sobald du es einmal begonnen hast.</string>
    <string name="einleitung_notification">Hier hast du die Möglichkeit dir eigene Erinnerungen zu erstellen, die dich individuell beim erreichen deines Zieles unterstützen sollen.</string>
    <string name="wochentage_notification">Wochentage</string>
    <string name="uhrzeit_notification">Uhrzeit</string>
    <string name="text_notification">Text</string>
    <string name="start_Menu">Startmenü</string>
    <string name="ziel_Menu">Ziel</string>
    <string name="tabelle_Menu">Ressourcen Tabelle</string>
    <string name="sonne_Menu">Sonne der Erkenntnis</string>
    <string name="hausaufgabe_Menu">Hausaufgaben</string>
    <string name="impressum_Menu">Impressum</string>
    <string name="menuZiel_Textview">Hier hast du immer die Möglichkeit dein Ziel zu betrachten. Du kannst es zu jedem Zeitpunkt ändern wenn du das Gefühl hast, dass sich dein Ziel in der Zwischenzeit verändert hat.</string>
    <string name="menuZiel_Editview">Hier steht dein Ziel!</string>
    <string name="impressum_Textview1">Die App entstand im Rahmen von zwei studentischen Abschlussarbeiten. Sie ist ein Gemeinschaftsprojekt der Arbeitsgruppen Medieninformatik und Mensch-Maschine-Interaktion des Instituts für Informatik und dem Lehrstuhl für Wirtschafts- und Organisationspsychologie der Ludwig-Maximilians-Universität München.
        \n\n<i>Umsetzung:</i>\nMaximilian Lammel und Stina Schick\n\n<i>Datenschutzerklärung:</i>Beschreibung der Datenarten, die von der App erhoben werden (Zugriffsrechte)\nErklärung des Zwecks für die diese Daten erhoben werden\nSpeicherdauer\n
        Information über Übermittlung an Dritte und deren Zweck\nGoogle Analytics gesondert aufführen\nDatum der Erstellung\n</string>
    <string name="impressum_Textview2">\n<i>Kontakt:</i>\nMaximilian.Lammel@cip.ifi.lmu.de\nStina.Schick@cip.ifi.lmu.de\n\n<i>Adresse:</i>\nInstitut für Informatik\nLFE Medieninformatik\nAmalienstraße 17\n80333 München\n\n<i>Quellen:</i>\nMusik: Homegrown by Blue Dot Sessions\nFrom the
    <a href="http://freemusicarchive.org">Free Music Archive</a>\nCC BY NC\n\nSoundeffekte:\n<a href="https://www.zapsplat.com/">ZAPSPLAT</a>\n<a href="http://soundbible.com/">SoundBible.com</a></string>
    <string name="hausaufgabe_Textview">Hausaufgaben sind nicht verpflichtend! Aber die Übungen können dir helfen, das Erlernte anzuwenden und so deiner Lösung Schritt für Schritt näher zu kommen. Im Verlauf der App werden neue Aufgaben freigeschaltet.</string>
    <string name="hausaufgabe_Button1">Tagebuch</string>
    <string name="hausaufgabe_Button2">Würfeln</string>
    <string name="hausaufgabe_Button3">Münzwurf</string>
    <string name="hausaufgabe_zurueck">Zurück</string>
    <string name="tagebucheintrag">Tagebucheintrag schreiben</string>
    <string name="zuWege">Wege ansehen</string>
    <string name="tagebuch_Textview">Du hast schon viel Arbeit in den Wandel gesteckt. Lass uns die nächsten Treffen dazu nutzen mehr von dem zu tun, was funktioniert. Schau genau hin: Was verbessert sich noch alles?\nBesonders effektiv ist es, wenn du dir am Abend, nachdem du einen Lösungsweg ausprobiert hast, ein paar Notizen in ein \"Tagebuch\" schreibst, welche positiven Veränderungen du bemerkt hast.\nViel Spaß dabei.\nDu kannst deine Lösungswege auch noch einmal ansehen.</string>
    <string name="tagebucheintrag_Textview">Schreibe auf, was dir aufgefallen ist.\nPositive Veränderungen.\nVerbesserungen.\nOder Komplimente, die du bekommen hast.</string>
    <string name="tagebucheintrag_Editview">Hier ist Platz für deinen Notizen!</string>
    <string name="zuHausaufgabe">Übung ansehen</string>
    <string name="muenze_werfen">Münze werfen</string>
    <string name="muenze_Textview">Bei Lösungsweg 3 hast du eine Welt ohne dein Problem kennengelernt! Passend dazu gibt es ein kleines Experiment:\nBevor du in die Situation kommst, in der dein Problem normalerweise auftritt, klicke auf \"Münze werfen\" oder werfe eine echte Münze. Wenn sie Kopf zeigt, dann tust du ein klein wenig so als wäre das Wunder schon geschehen. Bei Zahl lässt du alles wie bisher. Achte genau darauf wie dich dabei fühlst.\nDa du die Aufgabe noch nicht gemacht hast, hast du hier die Chance dazu, indem du auf \"Übung ansehen\" klickst.</string>
    <string name="wuerfeln">Würfeln</string>
    <string name="wuerfel_Textview">Wie mit allem: Übung macht den Meister! Daher ein kleines Spiel dazu:\nBei Lösungsweg 4 hast du dir neue, \"verrückte\" Verhaltensweisen überlegt. Klicke auf \"Würfeln\" um die Übung zu starten oder benutze einen echten Würfel.\nDie Augenzahl, die du würfelst, steht für einen Tag. 1 für Montag, 2 für Dienstag, 3 für Mittwoch, usw. Würfle und schaue, welcher Tag herauskommt.\nAn diesem Tag probierst du so ein \"verrücktes\" Verhalten aus. Beobachte ganz genau was an diesem Tag anders ist als am Rest der Woche.\nDa du die Aufgabe noch nicht kennengelernt, hast du hier die Chance dazu, indem du auf \"Übung ansehen\" klickst.</string>
    <string name="onboard1">Herzlichen Glückwunsch!\nMit dem Download dieser App hast du den ersten Schritt zur Lösungsfindung gemacht! Kompliment und Herzlich Willkommen!\nDu suchst nach Unterstützung beim Erreichen deiner Ziele? Dann bist du hier genau richtig!\n</string>
    <string name="onboard2">Lerne hier erste Schritte kennen um deine Probleme zu lösen. Die genaue Ursache des Problems ist dabei nicht entscheidend. Was zählt ist, wie du deine Situation in Zukunft siehst.\nDas Problem spielt hier eine untergeordnete Rolle. Wichtig ist, dass du dich gut fühlst und das soll durch eine Veränderung deines Blickwinkels erreicht werden - weg von der Problemfokussierung und hin zur Lösungsfokussierung.\nDeswegen bestimmst du auch das Tempo, in dem du dich durch die App bewegen willst. Nehme dir ruhig Pausen zwischen den einzelnen Übungen und verarbeite das Erlernte.\n</string>
    <string name="level1Start_Textview">Los geht’s in Level 1. Nachdem du dich kurz mit deinem Problem beschäftigt hast legst du hier dein Ziel fest. </string>
    <string name="keinProblem_button">Weiter, ich möchte das Problem nicht aufschreiben</string>
    <string name="problem_button">Ich möchte das Problem aufschreiben</string>
    <string name="problem1">Manchmal tut es gut das Problem aufzuschreiben und dann zur Seite zu legen. Danach sind deine Gedanken und der Weg frei um dich auf die Zukunft konzentrieren zu können.\nDu hast hier nun die Möglichkeit dein Problem in ein bis zwei Sätzen zusammenzufassen.</string>
    <string name="problem_beschreibung">Schreibe hier in ein bis zwei Sätzen auf, was genau das Problem ist und was dich daran am meisten belastet.</string>
    <string name="beschreibung">Beschreibung des Problems</string>
    <string name="problem_beschreibungDank_Textview">Vielen Dank für deine Offenheit! Ein Problem kann sehr belastend sein und gedanklich viel Platz einnehmen, es raubt Energie und trübt den Blick auf das Positive. Starte einen kleinen Versuch. Das Problem ist nun abgelegt und gut für dich aufbewahrt. Nun liegt es an einem anderen Ort und du hast Platz für neue Gedanken und Sichtweisen.</string>
    <string name="zielFesthalten_TextView">Der Fokus liegt ab jetzt auf deinem Ziel!\nWoran wirst du merken dass dein Problem gelöst ist?\nWas wäre in der Situation und an deinem Verhalten anders als vorher?</string>
    <string name="zielFesthalten_EditView">Nimm dir etwas Zeit und Ruhe und halte hier dein Ziel so knapp und präzise fest wie möglich.\nDu kannst natürlich jederzeit darauf zurgreifen, die Beschreibung anpassen oder Änderungen durchführen.\n</string>
    <string name="zielFesthalten_Button">Ziel festhalten</string>
    <string name="zielVerwahren_TextView">Super!\nDas ist keine leichte Aufgabe.\nDu kannst stolz auf dich sein, dass du dich mit deinem Ziel auseinander gesetzt hast.\nEin klares Ziel ist bereits die halbe Miete.</string>
    <string name="zielVerwahren_Button">Ziel verwahren</string>
    <string name="loesungswege_Textview">Wenn du bereits Ideen hast, die zu einer Verbesserung führen könnten, kannst du diese hier aufschreiben. Aller guten Dinge sind drei:</string>
    <string name="loesungswege_EditView1">1. </string>
    <string name="loesungswege_EditView2">2. </string>
    <string name="loesungswege_EditView3">3. </string>
    <string name="loesungswege_Button1">Fertig</string>
    <string name="loesungswege_Button2">Mir fällt nichts ein</string>
    <string name="veraenderung_Textview">Als du dich dafür entschieden hast diese App herunterzuladen, ging dem der Entschluss voraus etwas zu unternehmen um deine Situation zu verbessern. Das war ein konkreter Schritt in Richtung Veränderung. Hat sich vielleicht bei dir seit dem schon das eine oder andere verändert? Oder ist gerade dabei sich positiv zu verändern?</string>
    <string name="veraenderung_ButtonJa">Ja</string>
    <string name="veraenderung_ButtonNein">Nein</string>
    <string name="universal_Textview">Nachdem du dich nun schon mit vielen verschiedenen Übungen auf dem Weg zu deiner persönlichen Lösungsidee auseinandergesetzt hast, wird es nun ein bisschen \"verrückter\". Es soll jetzt mal etwas Unvernünftiges, Unlogisches ausprobiert werden. Sei gespannt, was bei einem solchen Experiment herauskommen kann.</string>
    <string name="universal_Button2">Mir fällt nichts ein</string>
    <string name="zehnTage_Textview1">Hier kannst du aufschreiben worauf du besonders stolz bist. Lass dir ruhig etwas Zeit zum Überlegen bevor du weitermachst.</string>
    <string name="zehnTage_Textview2">timer</string>
    <string name="zehnTage_EditView1">1. </string>
    <string name="zehnTage_EditView2">2. </string>
    <string name="zehnTage_EditView3">3. </string>
    <string name="rueckblick_TextView">Häufig ist es hilfreich noch mal auf das Erreichte zurückzublicken, um sich den eigenen Fortschritt bewusst zu machen.
    Angenommen, die Ziffer 1 steht dafür, wie dein Leben ausgesehen hat, als du die App installiert hast, und die Ziffer 10 dafür, wie es aussehen sollte wenn dein Ziel
     Final erreicht ist. \nWo stehst du deiner Einschätzung nach heute?</string>
    <string name="Seek1_TextView">1</string>
    <string name="Seek2_TextView">10</string>
    <string name="rWeiter_Button">Weiter</string>
</resources>