<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/start_Menu"
        android:id="@+id/start_menu"
        app:showAsAction="never"/>

    <item android:title="@string/ziel_Menu"
        android:id="@+id/ziel"
        app:showAsAction="never"
        />
    <item
        android:title="@string/tabelle_Menu"
        android:id="@+id/tabelle"
        app:showAsAction="never"/>
    <item
        android:title="@string/sonne_Menu"
        android:id="@+id/Sonne"
        app:showAsAction="never"/>

    <item
        android:title="@string/hausaufgabe_Menu"
        android:id="@+id/Hausaufgabe"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete"
        android:title="Delete"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        android:visible="false"></item>


    <item
        android:id="@+id/action_help"
        android:title="Hilfe"
        android:icon="@drawable/help"
        app:showAsAction="always"
        android:visible="false"
        ></item>

    <item
        android:title="@string/impressum_Menu"
        android:id="@+id/Impressum"
        app:showAsAction="never"/>

</menu>