<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_level2_loesungswege"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lammel.lob.Level2Loesungswege"
    android:orientation="vertical"
    android:layout_weight="1">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loesungswege_Textview"
                android:textSize="@dimen/activity_normalcontent" />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="174dp"
                    android:orientation="vertical">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/loesungswege_EditView1"
                        android:textSize="@dimen/activity_normalcontent"
                        android:id="@+id/loesungswege_edittext1"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/loesungswege_EditView2"
                        android:textSize="@dimen/activity_normalcontent"
                        android:id="@+id/loesungswege_edittext2"

                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/loesungswege_EditView3"
                        android:textSize="@dimen/activity_normalcontent"
                        android:id="@+id/loesungswege_edittext3"

                        />
            </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loesungswege_Textview2"
                    android:textSize="@dimen/activity_normalcontent"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/loesungswege_Button1"
            android:textSize="@dimen/activity_normalcontent"
            android:layout_weight="0.5"
            android:id="@+id/loesungswege_ButtonFertig"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/loesungswege_Button2"
            android:textSize="@dimen/activity_normalcontent"
            android:layout_weight="0.5"
            android:id="@+id/loesungswege_ButtonNichts"/>

    </LinearLayout>
</LinearLayout>
