<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_level1_zieldefinition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lammel.lob.Level1Zieldefinition"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"></include>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zielFesthalten_TextView"
        android:textSize="@dimen/activity_normalcontent"
        android:id="@+id/zielFesthalten_textView"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zielFesthalten_EditView"
        android:textSize="@dimen/activity_normalcontent"
        android:id="@+id/zieldefinition_EditText"
        android:layout_weight="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:text="@string/zielFesthalten_Button"
        android:id="@+id/zielFesthalten_Button"
        />


</LinearLayout>
