<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/zehnTage"
    tools:context="com.example.lammel.lob.ZehnTage">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"/>

    <include
        android:id="@+id/footer"
        layout="@layout/footer"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/zehnTage_Textview1"
        android:textSize="@dimen/activity_normalcontent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/zehnTage_Textview1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/zehnTage_Textview2"
        android:textSize="@dimen/activity_normalcontent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/zehnTage_Textview1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/zehnTage_Textview2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zehnTage_EditView1"
        android:textSize="@dimen/activity_normalcontent"
        android:id="@+id/zehnTage_edittext1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/zehnTage_Textview2"
        android:layout_marginStart="8dp"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:minLines="2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zehnTage_EditView2"
        android:textSize="@dimen/activity_normalcontent"
        android:id="@+id/zehnTage_edittext2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/footer"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/zehnTage_edittext1"
        android:layout_marginStart="8dp"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:minLines="2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zehnTage_EditView3"
        android:textSize="@dimen/activity_normalcontent"
        android:id="@+id/zehnTage_edittext3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/zehnTage_edittext2"
        android:layout_marginStart="8dp"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:minLines="2"/>

    <Button
        android:id="@+id/zehnTage_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:text="@string/loesungswege_Button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>
