<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_universalloesung"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lammel.lob.Level2Universalloesung"
    android:orientation="vertical"
    android:layout_weight="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/universal_Textview"
        android:textSize="@dimen/activity_normalcontent"
        android:layout_weight="0.8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/weiter_button"
            android:textSize="@dimen/activity_normalcontent"
            android:layout_weight="0.5"
            android:id="@+id/universal_ButtonWeiter"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/universal_Button2"
            android:textSize="@dimen/activity_normalcontent"
            android:layout_weight="0.5"
            android:id="@+id/universal_Anekdote"/>

    </LinearLayout>

</LinearLayout>
