<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_level2_veraenderung"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lammel.lob.Level2Veraenderung"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/veraenderung_Textview"
            android:textSize="@dimen/activity_normalcontent"
            />
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/veraenderung_ButtonJa"
            android:textSize="@dimen/activity_normalcontent"
            android:id="@+id/veraenderung_ButtonJa"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/veraenderung_ButtonNein"
            android:textSize="@dimen/activity_normalcontent"
            android:id="@+id/veraenderung_ButtonNein"/>
    </LinearLayout>

</LinearLayout>
