<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/menuziel"
    tools:context="com.example.lammel.lob.MenuZiel">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        />

    <include
        android:id="@+id/footer"
        layout="@layout/footer"
        />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/menuZiel_Textview"
        android:textSize="@dimen/activity_normalcontent"
        android:id="@+id/menuZiel_Textview"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/menuZiel_Editview"
        android:textSize="@dimen/activity_normalcontent"
        android:id="@+id/menuZiel_EditText"
        android:layout_weight="1"

        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/menuZiel_Textview"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_weight="0.5"
        android:text="@string/zielFesthalten_Button"
        android:id="@+id/menuZiel_zielButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="46dp"
        android:layout_marginStart="8dp" />

    <Button
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_weight="0.5"
        android:text="@string/hausaufgabe_zurueck"
        android:id="@+id/menuZiel_zurueckButton"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="46dp"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>
