<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rueckblick"
    android:background="@color/level5Background"
    tools:context="com.example.lammel.lob.Rueckblick">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"></include>

    <include
        android:id="@+id/footer"
        layout="@layout/footer"></include>

    <TextView
        android:id="@+id/rueckblick_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rueckblick_TextView"
        android:textSize="@dimen/activity_normalcontent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />

    <SeekBar
        android:id="@+id/rueckblick_seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:max="10"
        android:progress="1"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/rWeiter_Button"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/rWeiter_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rWeiter_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="46dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/Seek1_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Seek1_TextView"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/rueckblick_seekBar" />

    <TextView
        android:id="@+id/Seek2_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Seek2_TextView"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/rueckblick_seekBar" />

</android.support.constraint.ConstraintLayout>
